<resources>
    <string name="app_name">Quran ID</string>
    <string name="title_reminder">Menu Dzikir</string>
    <string name="title_ruqya">Menu Ruqya</string>
    <string name="title_option_surah">Surah Pilihan</string>
    <string name="title_quran_juzamma">Juzamma</string>
    <string name="title_prayer_schedule">Jadwal Sholat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="verse_id">1</string>
    <string name="asma">الفاتحة</string>
    <string name="bissmillah">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="quran_tafsir_ibnu_katsir">تفسير القرآن العظيم</string>
    <string name="label_tafsir_dan_hadits">Tafsir dan Kitab Hadits</string>
    <string name="indo_bissmillah">Dengan menyebut nama Allah yang Maha Pemurah Maha Penyayang</string>
    <string name="ref_hadits">Hadits riwayat Bukhari dan Muslim</string>
    <string name="label_reset">Reset</string>
    <string name="label_tap_dzikr">Tap Dzikr</string>
    <string name="label_start">0</string>
    <string name="label_title_dzikir">Al-Fatihah</string>
    <string name="label_latin_text">Bissmillaahirrahmaanirrahiim</string>
    <string name="label_about_app">Tentang Aplikasi</string>
    <string name="label_app_name">Quran ID </string>
    <string name="label_copy_right">created by Ogi - Copy Right 2022</string>
    <string name="label_address">Tangerang Selatan, Indonesia</string>
    <string name="label_quran_dan_terjemahan">Quran Teks dan Translasi</string>
    <string name="label_quran_api">Quran API</string>
    <string name="label_link_source">https://quranapi.idn.sch.id</string>
    <string name="label_sumber_audio_quran">Sumber Audio Quran</string>
    <string name="label_every_ayah_quran_audio">Every Ayah dan Quranic Audio</string>
    <string name="label_link_2">https://download.quranicaudio.com</string>
    <string name="label_link_3">https://everyayah.com</string>
    <string name="label_note">Catatan</string>
    <string name="share">Bagikan</string>
    <string name="label_info_surah">(Qs. Al-Fatihah 1:1)</string>
    <string name="label_goto">Pergi ke Nomor</string>
    <string name="cancel">Batal</string>
    <string name="label_ayah_filter">Saring Ayat</string>
    <string name="label_putar_ayat">Putar Ayat</string>
    <string name="label_report">Laporkan ayat ini</string>
    <string name="feed_back">Beri Rating</string>
    <string name="label_share">Bagikan ayat ini</string>
    <string name="label_copy">Salin ayat ini</string>
    <string name="label_help_info">Ayat ini tersimpan otomatis, posisi ayat yang tersimpan posisinya berada paling atas seperti pada contoh gambar diatas. Jadi misal ayat 20 berada paling atas, maka akan tersimpan otomatis ayat terakhir dibaca no 20.</string>
    <string name="label_page_help">Halaman bantuan baca quran</string>
    <string name="al_fatihah">Nama Surat</string>
    <string name="type_label">Tipe Surat</string>
    <string name="divider">|</string>
    <string name="jumlah_ayat">Jumlah Ayat</string>
    <string name="pembukaan">Arti Surat</string>
    <string name="label_bismillah">9</string>
    <string name="label_title_hm">Do\'a meminta terhindar dari keburukan</string>
    <string name="label_category_hm">Pagi dan Sore</string>
    <string name="label_detail_dua">Seputar Do\'a</string>
    <string name="app_version">Dzikir dan Do\'a v.1.2</string>
    <string name="icon_license">Kredit Lisensi Icon</string>
    <string name="des_license_icon">Lisensi Android Apache 2.0 dan freepik</string>
    <string name="email_subjext">Masukan Judul Topic</string>
    <string name="input_email">Masukan email yang valid</string>
    <string name="label_email">Email: input valid email</string>
    <string name="label_subject">Subject: </string>
    <string name="label_description">Description: </string>
    <string name="label_send">Kirim</string>
    <string name="label_timer">00:00</string>
    <string name="label_ar_rahman">Ar-Rahman</string>
    <string name="label_refs">references</string>
    <string name="label_tafsir_quran">Tafsir dan Hadits</string>
    <string name="title_tafsir_dan_kitab_hadits">Tafsir dan Kitab Hadits</string>
    <string name="label_tafsir_surah_al_fatihah">Surah Al-Fatihah</string>

    <string name="rate_dialog_title">Beri Ulasan</string>
    <string name="rate_dialog_message">Jika teman-teman muslim suka dengan aplikasi ini, luangkan waktu untuk beri ulasan. Terimakasih atas dukungannya!</string>
    <string name="rate_dialog_ok">Beri Ulasan Sekarang</string>
    <string name="rate_dialog_cancel">Ingatkan Saya Kembali</string>
    <string name="rate_dialog_no">Tidak, Terimakasih</string>


    <string name="enter_todo_hint">e.g., Belajar Hapalan Juzamma</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="add_todos">Add a Todo…</string>
    <string name="label_task">Hapalan Juzamma</string>
    <string name="label_empty">Belum Ada Catatan</string>
    <string name="label_remove_data">Hapus Data</string>
    <string name="label_task_header">#Task</string>
    <string name="label_problem_report">Laporkan Masalah</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_date_set">Atur Tanggal</string>
    <string name="label_priority_set">Atur Prioritas</string>
    <string name="label_save">Simpan</string>

    <string name="GPSAlertDialogTitle">GPS</string>
    <string name="GPSAlertDialogMessage">GPS Message</string>
    <string name="action_settings">Settings</string>
</resources>