<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/about_app"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/label_app_name"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/app_version"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:paddingBottom="5dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorGrey"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_green"
        android:text="@string/label_copy_right"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/label_address"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_green"
        android:text="@string/label_quran_dan_terjemahan"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/label_quran_api"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:text="@string/label_link_source"
        android:linksClickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_green"
        android:text="@string/label_sumber_audio_quran"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/label_every_ayah_quran_audio"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:text="@string/label_link_2"
        android:linksClickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textColor="@color/black"
        android:text="@string/label_link_3"
        android:linksClickable="true"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_green"
        android:text="@string/icon_license"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/des_license_icon"
        android:textColor="@color/black"
        />
</LinearLayout>
