<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_note"
        android:title="@string/label_note"
        android:icon="@drawable/ic_edit_note"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_direct_message"
        android:title="@string/label_problem_report"
        android:icon="@drawable/ic_send"
        app:showAsAction="never"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_info"
        android:title="@string/label_about_app"
        android:icon="@drawable/ic_info"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_privacy"
        android:title="@string/label_privacy_policy"
        android:icon="@drawable/ic_privacy_tip"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="always"/>
</menu>