<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="2"
    android:padding="8dp"
    android:gravity="center"
    android:baselineAligned="false"
    android:background="?attr/selectableItemBackground"
    android:id="@+id/action_detail">
    <RelativeLayout
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/frame_number">

        <TextView
            android:id="@+id/tv_surah_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/verse_id"
            android:textColor="@color/dark_green"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>
    <LinearLayout
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_surah_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/al_fatihah"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_ayat"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/divider"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:id="@+id/tv_total_ayah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_label"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_surah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sname_1"
        app:tint="@color/green"
        android:contentDescription="@string/app_name"/>
</LinearLayout>