<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardViewDhm"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:padding="16dp"
        android:baselineAligned="false">
        <RelativeLayout
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_circle_green">

            <TextView
                android:id="@+id/tv_number_dhm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/verse_id"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </RelativeLayout>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:baselineAligned="false">
            <TextView
                android:id="@+id/tv_arabic_text_dhm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:fontFamily="@font/al_qalam_majeed"
                android:text="@string/bissmillah"
                android:textColor="@color/black"
                android:layout_gravity="end"/>

            <TextView
                android:id="@+id/tv_read_text_dhm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indo_bissmillah"
                android:textColor="@color/dark_green"
                android:textStyle="italic"
                android:shadowColor="#00FFFFFF"
                android:shadowDx="48"
                android:shadowDy="0"
                android:shadowRadius="1"
                android:gravity="fill"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
            <TextView
                android:id="@+id/tv_indo_text_dhm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ref_hadits"
                android:textSize="16sp"/>
            <TextView
                android:background="@color/lightGreen"
                android:id="@+id/tv_refs_dhm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:text="@string/label_info_surah"
                android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>